<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="st_InsertData" Id="{7b040138-9549-44fb-838d-136d85eff2ad}">
    <Declaration><![CDATA[TYPE st_InsertData :
STRUCT
	Datum:STRING(100);
	temp_set:STRING(10);
	temp_act:STRING(10);
	hum_set:STRING(10);
	hum_act:STRING(10);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>